# wikipedia-3d-embeddings

./: .gitignore  10000vital.csv  1000vital.csv  README.md  export2d.py  export_data.py  index.html  package.json  parse_wikipedia.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  wiki.py
docs/: index.html
docs/data/: 1k.json
docs/static/js/: main.9b685d46.js  main.9b685d46.js.map
src/: App.css  App.tsx  DocumentVisualization.tsx  index.tsx  utils.ts
wikipedia/: README.md  export.py  load.py  pyproject.toml  requirements.txt
